Routing and Navigation

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -45,6 +45,38 @@
                 "uri": "Invoices.json"
             }
         },
+        "routing": {
+            "config": {
+                "routerClass": "sap.m.routing.Router",
+                "type": "View",
+                "viewType": "XML",
+                "path": "sap.ui.demo.walkthrough.view",
+                "controlId": "app",
+                "controlAggregation": "pages"
+            },
+            "routes": [
+                {
+                "pattern": "",
+                "name": "overview",
+                "target": "overview"
+                },
+                {
+                "pattern": "detail",
+                "name": "detail",
+                "target": "detail"
+                }
+            ],
+            "targets": {
+                "overview": {
+                "id": "overview",
+                "name": "Overview"
+                },
+                "detail": {
+                "id": "detail",
+                "name": "Detail"
+                }
+            }
+        },
         "resources": {
             "css": [
                 {
